starting the fourier analysis

--- a/latex_thesis/einstein_eq/einstein_eq_gw.tex
+++ b/latex_thesis/einstein_eq/einstein_eq_gw.tex
@@ -265,7 +265,7 @@ for a given vector field $\xi^\mu$.
 Gauge transformations are particularly important because they leave the Riemann curvature tensor unchanged (up to the first order in $h_{\mu \nu}$), indeed, the physical spacetime is unchanged. 
 The invariance of the curvature under such transformations is analogous to the traditional gauge invariance of electromagnetism.\\
 Assuming that the Einstein's field equation(\ref{linear_einstein_eq}) are valid everywhere the metric perturbation $h_{\mu \nu}$ contains: gauge degrees of freedom; physical, radiative degrees of freedom; and physical, non-radiative degrees of freedom tied to the matter source of the GW. \\
- It is possible to show that the linearized Einstein's equation can be written as 5 Poisson-type quations for certain combinations of spacetimemetric, plus a wave equation for the transverse-traceless components of the metric perturbation, which represents the radiative degrees of freedom.\\%[ref] 
+ It is possible to show that the linearized Einstein's equation can be written as 5 Poisson-type quations, plus a wave equation for the transverse-traceless components of the metric perturbation, which represents the radiative degrees of freedom.\\%[ref] 
  Neverthless this procedure will manifestly demonstrate that the radiative degrees of freedom in spacetime are two, it is a cumbersome and long derivation.
 Instead, we ignore the degrees of freedom tied to the matter and we consider only solutions of equation(\ref{wave_equation}):
 \[
