--- a/latex_thesis/production_gw/prod_gw.tex
+++ b/latex_thesis/production_gw/prod_gw.tex
@@ -1,12 +1,12 @@
 We have studied how the gravitational waves propagate in vacuum. 
 We now want to understand the relation between the gravitational waves and their source. In most of the physical scenarios the system that produces the gravitational waves is small compared to the distances with the detector. Therefore,
-In order to study the solutions of the linearized Einstein's field equation(\ref{linear_einstein_eq})
+in order to study the solutions of the linearized Einstein's field equation(\ref{linear_einstein_eq})
 we make a crucial approximation
 
 \subsection{Solution of the linearized Einstein's field equation}
 \label{solution_linearized_einstein_eq}
 The generation of gravitational radiation depends on the movements of objects in spacetime. 
-So far, we have neglected the presence of matter and we solved the linearized the Einstein's field equation in vaccum. However, if we want to analyze the relation between sources and gravitational waves we need to consider $T_{\mu \nu} \neq 0$ and solve equation(\ref{linear_einstein_eq}):
+So far, we have neglected the presence of matter and we solved the linearized Einstein's field equation in vacuum. However, if we want to analyze the relation between sources and gravitational waves we need to consider $T_{\mu \nu} \neq 0$ and solve equation(\ref{linear_einstein_eq}):
 \[
 \square \bar{h}_{\mu \nu} = - 16 \pi \, T_{\mu \nu}
 \]
@@ -72,7 +72,7 @@ So we rewrite equation(\ref{h_retarded_solution}) using the far field approximat
  T_{\mu \nu} \qty(t-r,\vb{y}) \, \dd[3]y
 \]
 Since most of the sources are very far from the detection point, the above result is a very good approximation in most of the cases, and it shows the $1/r$ dependency of the gravitational wave.\\
-Using the Fourier trassform and inverse with respect to time
+Using the Fourier transform and inverse with respect to time
 \bea
 \phi (t,\vb{x}) &=&  \mathcal{F}^{-1}[\tilde{\phi}(\omega , \vb{x})] \equiv 
 \dfrac{1}{\sqrt{2 \pi}} \, \int \dd \omega e^{-i\omega t} \tilde{\phi}(\omega , \vb{x}) \\
