--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -54,6 +54,7 @@ A really interesting and fascinating abstract
 
 \clearpage
 \section{Conclusion}
+\input{conclusion/conclusion.tex}
 
 \clearpage
 %% APPENDICES
