--- a/latex_thesis/shared/packages.tex
+++ b/latex_thesis/shared/packages.tex
@@ -21,7 +21,7 @@
 \usepackage{caption}
 \usepackage{subfig}
 \usepackage{mathrsfs}
-
+\usepackage{float}
 \usepackage{fancyhdr}
 \input{shared/package-config/fancyhdr}
 
