--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -366,14 +366,17 @@ Such phenomenon could be due to the oscillations of the BBH orbits, however, a m
 \pagebreak
 
 \subsection{Binary Neutron Star}
-We now study the evolution of a binary neutron star made of two equal-mass objects rotating with an quasi-equilibrium initial conditions obtained using the software \textbf{Lorene} [REF]. \\
+We now study the evolution of a binary neutron star made of two equal-mass objects rotating with an quasi-equilibrium initial conditions obtained using the software \textbf{Lorene} [REF]. 
+The \\
 The hydrodynamic evolution of the neutron stars is accomplished using the ideal fluid approximation, provided with the following equation of state (EOS)
 \begin{equation}
 \label{eos}
 P = K \, \rho ^{\Gamma}
 \end{equation}
 where $K$ is the polytropic constant and $\Gamma$ is the adiabatic index.\\
-The initial separation between the two neutron stars is set to be $45 \, \kilo \meter \approx 30.47 \, M_{\odot}$, whereas we set $K=123.6$ and $\Gamma=2$.
+The initial separation between the two neutron stars is set to be $45 \, \kilo \meter \approx 30.47 \, M_{\odot}$, whereas we set $K=123.6$ and $\Gamma=2$.\\
+A neutron star is a compact object with a density distribution $\rho$, varying from the barycenter up to the surface. 
+We plot in Figure() the trajectory of the neutron star 
 
 
 
