--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -4,7 +4,7 @@
 
 %% TITLE
 \author{Lorenzo Speri}
-\title{\bf{A Very Impressive and Fancy Title for a Thesis}}
+\title{\bf{Understanding Gravitational Waves through Numerical Simulations}}
 \date{May 2018}
 
 %% LOAD PACKAGES
